added import pdf, export md, started snippets better
