# app/swagger/easytex.yml
@@ -135,6 +135,69 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       tags: [notes]
+  /notes/{noteId}/download/md:
+    get:
+      parameters:
+        - in: path
+          name: noteId
+          schema:
+            type: integer
+          required: true
+          description: Числовой идентификатор заметки
+      summary: Получение заметки в виде md файла
+      responses:
+        '200':
+          description: Ответом является MD файл
+          content:
+            text/markdown:
+              schema:
+                type: string
+                format: binary
+        '404':
+          description: Ответ при запросе файла, которого не существует
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Ответ при ошибке на стороне сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags: [notes]
+
+  /notes/{noteId}/download/pdf:
+    get:
+      parameters:
+        - in: path
+          name: noteId
+          schema:
+            type: integer
+          required: true
+          description: Числовой идентификатор заметки
+      summary: Получение заметки в виде pdf файла
+      responses:
+        '200':
+          description: Ответом является PDF файл
+          content:
+            text/markdown:
+              schema:
+                type: string
+                format: binary
+        '404':
+          description: Ответ при запросе файла, которого не существует
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Ответ при ошибке на стороне сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      tags: [notes]
   /notes/search:
     post:
       summary: Поиск заметок
@@ -352,6 +415,34 @@ paths:
                     type: string
                     format: binary
       tags: [recognizer]
+  /recognizer/pdf:
+    post:
+      responses:
+        '200':
+          description: Ответ при успешном выполнении запроса
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  text:
+                    type: string
+        '500':
+          description: Ответ при ошибке на стороне сервера
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                data:
+                  type: string
+                  format: binary
+      tags: [recognizer]
   /recognizer/mixed:
     post:
       responses:
@@ -400,7 +491,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
       tags: [snippets]
-
 components:
   schemas:
     GetSnippetsResponse:
@@ -432,7 +522,7 @@ components:
         body:
           type: string
           description: Тело сниппета
-          example: "```$$\\alpha$$```"
+          example: '```$$\alpha$$```'
           x-isnullable: false
         userId:
           type: number
